# NotSimpleGame

./: CMakeLists.txt  LICENSE  README.md  THIRD-PARTY-LICENSES.md
src/: main.cpp
src/UI/: debugWindow.cpp  debugWindow.h  mainGameHUD.cpp  mainGameHUD.h  menuHUD.cpp  menuHUD.h
src/UI/DebugWidgets/: collisionButtonDebugWindow.cpp  collisionButtonDebugWindow.h  optionWidgetsDebugWindow.cpp  optionWidgetsDebugWindow.h  panelInsideDebugWindow.cpp  panelInsideDebugWindow.h  playerChangeNormalStatsDebugWindow.cpp  playerChangeNormalStatsDebugWindow.h  playerChangeStatsDebugWindow.cpp  playerChangeStatsDebugWindow.h  playerInfoLabelsDebugWindow.cpp  playerInfoLabelsDebugWindow.h
src/UI/MainGameHUDWidgets/: panelsWithLayouts.cpp  panelsWithLayouts.h  playerAddPointsToStats.cpp  playerAddPointsToStats.h  playerEquipmentWidget.cpp  playerEquipmentWidget.h  playerInventoryWidget.cpp  playerInventoryWidget.h  playerNameAndLevel.cpp  playerNameAndLevel.h  playerProgressBars.cpp  playerProgressBars.h  playerStats.cpp  playerStats.h  waveCounter.cpp  waveCounter.h
src/UI/PlayerWidgets/: optionWidgetsDebugWindow.cpp  optionWidgetsDebugWindow.h  panelInsideDebugWindow.cpp  panelInsideDebugWindow.h
src/UI/helpers/: mouseContainer.h
src/core/: darkMath.cpp  darkMath.h  game.cpp  game.h  gameMenu.cpp  gameMenu.h  renderer.cpp  renderer.h
src/entities/: baseEntity.cpp  baseEntity.h
src/entities/enemies/: basicEnemy.cpp  basicEnemy.h
src/entities/helpers/: entityEnums.h  entityStructs.h
src/entities/player/: player.cpp  player.h
src/entities/projectile/: projectileEntity.cpp  projectileEntity.h
src/entity/: player.cpp  player.h
src/handlers/: collisionHandler.cpp  collisionHandler.h  debugHandler.cpp  debugHandler.h  entitiesHandler.cpp  entitiesHandler.h  eventHandler.cpp  eventHandler.h
src/inventory/: Inventory.cpp  Inventory.h  baseEquipment.cpp  baseEquipment.h  enemyEquipment.cpp  enemyEquipment.h  inventorySystem.cpp  inventorySystem.h  playerEquipment.cpp  playerEquipment.h
src/items/: armor.cpp  armor.h  itemAttributes.cpp  itemAttributes.h  itemBase.cpp  itemBase.h  itemEffects.cpp  itemEffects.h  itemEnums.h  itemStructs.h  weapon.cpp  weapon.h
src/items/helpers/: enumConversion.cpp  enumConversion.h  enumConversionTextures.cpp  enumConversionTextures.h  enumsToVectorList.cpp  enumsToVectorList.h  itemEnums.h  itemStructs.h
src/managers/: LanguageManager.cpp  LanguageManager.h  UIManager.cpp  UIManager.h  assetsManager.cpp  assetsManager.h  entitiesManager.cpp  entitiesManager.h  inputManager.cpp  inputManager.h  itemManager.cpp  itemManager.h  statsManager.cpp  statsManager.h
src/math/: darkMath.cpp  darkMath.h
